kubernetes/apps/media/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  labels:
    app: sabnzbd
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - sabnzbd.wakkalabs.com
      secretName: sabnzbd-tls
  rules:
    - host: sabnzbd.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
